# sleepSyncAgent

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.nrf52  README.md  config.h  sleep.cpp  testing.md
src/: CMakeLists.txt  app.h  clique.cpp  clique.h  cliqueMerger.h  config.h  dropoutMonitor.cpp  dropoutMonitor.h  globals.cpp  globals.h  log.h  main.cpp  masterXmitSyncPolicy.cpp  message.h  os.h  osalTIRTOS.cpp  physicalParameters.h  powerManager.cpp  powerManager.h  radioWrapper.h  random.h  role.cpp  role.h  schedule.h  scheduleParameters.h  sleepSyncAgent.cpp  sleepSyncAgent.h  syncAgent.cpp  syncAgent.h  syncPolicy.cpp  syncPolicy.h  syncSlot.cpp  types.h  workSlot.cpp
src/augment/: README  longClock.cpp  longClock.h  powerManager.cpp  powerManager.h  random.cpp  random.h  randomAlarmingClock.cpp  randomAlarmingClock.h  timeMath.cpp  timeMath.h
src/clique/: clique.cpp  clique.h  cliqueReversion.cpp  cliqueRoles.cpp  cliqueScatter.cpp  periodTime.h  schedule.cpp  schedule.h
src/cliqueHistory/: cliqueHistory.cpp  cliqueRecord.h
src/cliqueMerger/: cliqueMerger.cpp  cliqueMerger.h
src/fishPolicy/: deepFishingPolicy.cpp  fishPolicy.h  fishPolicyABC.h  fishPowerMgr.cpp  fishPowerMgr.h  fishingParameters.h  simpleFishPolicy.cpp  slottedFishSession.cpp  slottedFishSession.h  syncRecoveryfishPolicy.cpp  utils.h
src/logging/: flashLogger.cpp  flashLogger.h  logger.cpp  logger.h  readme.md  remoteLogger.cpp  remoteLogger.h
src/message/: message.cpp  message.h  messageFactory.h  otaPacket.h  serializer.cpp  serializer.h
src/messageHandler/: commonMessageHandler.cpp  deepFishingMessageHandler.cpp  fishSlotMsgHandler.cpp  messageDispatcher.cpp  messageDispatcher.h  messageHandler.h  readme.md  syncSlotMsgHandler.cpp
src/modules/: README  sendRepeater.cpp  sendRepeater.h  syncBehaviour.cpp  syncBehaviour.h  syncOffset.cpp  syncOffset.h  syncPowerManager.cpp  syncSender.cpp  syncSender.h
src/network/: controller.cpp  controller.h  granularity.cpp  granularity.h  intraCliqueManager.cpp  intraCliqueManager.h  netTypes.h  scatter.cpp  scatter.h  sendRepeater.cpp  topology.cpp  topology.h  topologyProvisioner.cpp  topologyProvisioner.h
src/platform/: README  ledLogger.cpp  log.h  logger.cpp  logger.h  mailbox.cpp  mailbox.h  os.cpp  os.h  osalTIRTOS.cpp  platform.h  platformAbstractionForSync.h  power.h  powerManager.h  radio.cpp  radio.h  radioWrapper.h  random.cpp  sleep.cpp  sleep.h  sleeper.cpp  sleeper.h  tickCounter.cpp  tickCounter.h  types.h  uniqueID.cpp  uniqueID.h
src/platformHeaders/: README  ledLogger.h  platform.h  sleeper.h  types.h  uniqueID.h
src/policy/: dropoutMonitor.cpp  fishWaitingPolicy.cpp  fishWaitingPolicy.h  policyParameters.h  provisionManager.cpp  workManager.cpp  workManager.h  workPolicy.h
src/policy/syncPolicy/: adaptiveXmitSyncPolicy.cpp  adaptiveXmitSyncPolicy.h
src/powerManager/: powerManager.cpp  powerManager.h
src/provisioning/: provisionManager.cpp  provisionSchedule.cpp  provisionSchedule.h  provisionTask.cpp  provisionerCallback.cpp  provisionerCallback.h  provisioningPublisher.cpp  provisioningPublisher.h  readme.md  workProvisioner.cpp  workProvisioner.h  workProvisioningProxy.cpp  workProvisioningProxy.h
src/radio/: radio.cpp  radio.h
src/receiver/: receiver.cpp  receiver.h
src/schedule/: radioPrelude.cpp  radioPrelude.h  schedule.cpp  schedule.h  sleepDuration.cpp  sleepDuration.h  syncSchedule.cpp  syncSchedule.h  taskTimer.cpp  taskTimer.h  timer.cpp  timer.h
src/sleepers/: oversleepMonitor.cpp  oversleepMonitor.h  scheduleSleeper.cpp  syncSleeper.cpp  syncSleeper.h  syncSleeperObs.cpp
src/sleepers/cruft/: oversleepMonitor.cpp  scheduleSleeper.cpp  syncPowerSleeper.cpp  syncPowerSleeper.h  syncSleeperObs.cpp
src/sleepingSlots/: fishSlot.h  mergeSlot.cpp  modalSyncPeriod.cpp  modalSyncPeriod.h  readme.md  syncSlotKinds.cpp  syncWorkSlot.cpp  syncWorkSlot.h
src/sleepingSlots/syncPeriod/: provisionedSyncPeriod.cpp
src/slots/fish/: fishSlot.cpp  fishSlot.h
src/slots/fishing/: deepFishing.cpp  deepFishing.h  deepFishingPolicy.cpp  fishPolicy.cpp  fishPolicy.h  fishSchedule.cpp  fishSchedule.h  fishSlot.cpp  fishSlot.h  fishingManager.cpp  fishingManager.h  fishingMode.h
src/slots/info/: infoSlot.cpp
src/slots/infoing/: infoSlot.h
src/slots/merge/: mergePolicy.cpp  mergeSchedule.cpp  mergeSchedule.h  mergeSlot.cpp  mergeSlot.h
src/slots/merging/: mergePolicy.h  mergeSchedule.cpp  mergeSchedule.h  mergeSlot.cpp  mergeSlot.h
src/slots/sync/: readme.md  syncSlot.cpp  syncSlot.h  syncSlotProperty.cpp  syncSlotProperty.h
src/slots/syncing/: syncSlot.cpp  syncSlot.h  syncSlotKinds.cpp  syncSlotSchedule.cpp  syncSlotSchedule.h  syncSlotStep.cpp  syncSlotStep.h  syncSubSlots.cpp  syncWorkSlot.cpp  syncWorkSlot.h
src/syncAgent/: clique.cpp  clique.h  cliqueMerger.cpp  cliqueMerger.h  deltaSync.h  dispatchMsgUntil.cpp  dropoutMonitor.cpp  dropoutMonitor.h  fishSlot.cpp  fishingParameters.h  flashIndex.h  globals.cpp  globals.h  logMessage.h  logger.h  longClock.cpp  longClock.h  masterXmitSyncPolicy.cpp  masterXmitSyncPolicy.h  mergeOffset.h  mergeSlot.cpp  merging.cpp  message.h  messageDispatch.cpp  physicalParameters.h  provisioningPublisher.cpp  provisioningPublisher.h  schedule.cpp  schedule.h  scheduleParameters.h  serializer.cpp  serializer.h  syncAgent.cpp  syncAgent.h  syncAgentLoop.cpp  syncAgentRole.cpp  syncAgentToApp.cpp  syncPowerSleeper.cpp  syncSlot.cpp  time.h  (+2 more)
src/syncAgent/clique/: clique.cpp  clique.h  cliqueReversion.cpp  cliqueRoles.cpp  periodTime.cpp  periodTime.h  schedule.cpp  schedule.h
src/syncAgent/control/: controller.cpp
src/syncAgentImp/: provisioningPublisher.cpp  provisioningPublisher.h  syncAgentImp.cpp  syncAgentImp.h  syncAgentLoop.cpp  syncAgentRole.cpp  syncAgentToApp.cpp
src/syncPeriod/: combinedSyncPeriod.cpp  provisionedSyncPeriod.cpp  readme.md
src/task/: checkPowerReserve.cpp  fishTask.cpp  mergerTask.cpp  provisionTask.cpp  task.cpp  task.h
src/work/: workControlProxy.cpp  workControlProxy.h  workIn.cpp  workIn.h  workOut.cpp  workOut.h
(+190 files in other folders)
